--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on BitBucket at <https://bitbucket.or
 
 dependencies:
 - base >= 4.7 && < 5
+- blaze-html
+- bytestring
 - containers
 - directory
 - filepath
