--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on BitBucket at <https://bitbucket.or
 dependencies:
 - base >= 4.7 && < 5
 - blaze-html
+- blaze-markup
 - bytestring
 - containers
 - directory
