--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: nixbuild/nix-quick-install-action@v28
+      - run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable
+      - run: nix-channel --update
       - run: nix-build --version
       - run: nix-shell -p hpack --command hpack
       - run: nix-build
