--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -7,6 +7,9 @@ jobs:
       - uses: nixbuild/nix-quick-install-action@v28
       - run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable
       - run: nix-channel --update
+      - run: pwd
+      - run: ls -la
+      - run: ls -la *
       - run: nix-build --version
       - run: nix-shell -p hpack --command hpack
       - run: nix-build
