ci checkout repo

--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -5,11 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: nixbuild/nix-quick-install-action@v28
-      - run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable
-      - run: nix-channel --update
+      - uses: actions/checkout@v4
       - run: pwd
       - run: ls -la
-      - run: ls -la *
+      - run: ls -la ..
+      - run: nix-channel --add https://nixos.org/channels/nixpkgs-unstable
+      - run: nix-channel --update
       - run: nix-build --version
       - run: nix-shell -p hpack --command hpack
       - run: nix-build
