Type annotation pragma in variable declarations

--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,7 @@ library:
     - LambdaCase
     - NamedFieldPuns
     - OverloadedStrings
+    - TupleSections
   source-dirs: src
   ghc-options: [-W]
 
