Optional arguments in user functions

--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,7 @@ dependencies:
 
 library:
   default-extensions:
+    - BlockArguments
     - LambdaCase
     - NamedFieldPuns
     - OverloadedStrings
